--- a/src/app/auth/components/auth-card/auth-card.component.html
+++ b/src/app/auth/components/auth-card/auth-card.component.html
@@ -37,7 +37,7 @@
                   </form>
                 </div>
                 <div class="tab-pane fade" id="signup-tab-pane" role="tabpanel" aria-labelledby="signup-tab" tabindex="0">
-                  <form>
+                  <form (ngSubmit)="register()">
                     <div class="row">                      
                       <div class="col-md-6 mb-4">
                         <div class="form-floating">
@@ -53,12 +53,12 @@
                       </div>
                     </div>
                     <div class="form-floating mb-4">
-                      <input type="email" name="email-signup" id="emailsignup" class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
+                      <input type="email" [(ngModel)]="emailsignup" name="email-signup" id="emailsignup" class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
                       autocomplete="off"/>
                       <label class="form-label" for="emailsignup">Correo Electronico</label>
                     </div>
                     <div class="form-floating mb-4">
-                      <input type="password" name="password-signup" id="passwordsignup" class="form-control bg-black text-white personalized-inputs" placeholder="asdasd"/>
+                      <input type="password" [(ngModel)]="passwordsignup" name="password-signup" id="passwordsignup" class="form-control bg-black text-white personalized-inputs" placeholder="asdasd"/>
                       <label class="form-label" for="passwordsignup">Contraseña</label>
                     </div>
                     <button class="btn btn-outline-success btn-lg px-5 mt-4" type="submit">Registrate</button>
