--- a/src/app/profile/components/profile-view/profile-view.component.css
+++ b/src/app/profile/components/profile-view/profile-view.component.css
@@ -1,3 +1,10 @@
+@media only screen and (min-width: 600px) {
+    .contenedor{
+        flex-wrap: wrap!important;
+    }
+    
+}
+
 .img-resize {
     height: 200px;
     width: 200px;
