--- a/src/app/profile/components/profile-view/profile-view.component.html
+++ b/src/app/profile/components/profile-view/profile-view.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex mt-5 justify-content-center">
-    <div class="row flex-nowrap">
+    <div class="row contenedor flex-nowrap">
         <div class="col-lg-6">
             <div class="card">
                 <img src="../../../../assets/user-profile-icon-free-vector.jpg" class="img-resize" alt="">
