--- a/src/app/shared/components/rigth-menu/rigth-menu.component.html
+++ b/src/app/shared/components/rigth-menu/rigth-menu.component.html
@@ -1,17 +1,114 @@
-<div class="bg-white p-2">
+<ul class="nav nav-pills flex-column mt-4 gap sidebar-right-mods">
+    <li class="nav-item">
+        <div class="card" style="max-width: 100%;">
+            <div class="row g-0 ">
+                <div class="col-md-4">
+                    <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
+                </div>
+                <div class="col-md-6 width-media align-self-center">
+                    <h5 class="card-title">UserName</h5>
+                    <div class="card-subtitle">Puntuacion: 50</div>
+                    <div class="card-subtitle">Puesto en tabla: 3</div>
+                </div>
+            </div>
+            <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
+            <div class="card-body hidden">
+                <div class="d-grid gap-2">
+                    <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
+                </div>
+            </div>
+        </div>
+    </li>
+    <li>
+        <div class="show">
+            <button class="btn btn-outline-primary">Ver logros</button>
+        </div>
+    </li>
+    <li>
+        <div class="card scroll hidden" style="max-width: 100%;">
+            <app-achievements></app-achievements>
+        </div>
+    </li>
+    <li>
+        <div class="show">
+            <button class="btn btn-outline-primary">Ver ranking de scrummies</button>
+        </div>
+    </li>
+    <li>
+        <div class="hidden" style="max-width: 100%;">
+            <div class="row g-0 justify-content-center">
+                <div class="col-auto align-self-center">
+                    <h5 class="card-title">Top 3 scrummies</h5>
+                </div>
+            </div>
+            <table class="table">
+                <thead>
+                    <tr class="table-secondary">
+                        <th scope="col">Posición</th>
+                        <th scope="col">UserName</th>
+                        <th scope="col">Puntos</th>
+                    </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                    <tr class="table-secondary">
+                        <th scope="row">1</th>
+                        <td>KOKO</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="table-secondary">
+                        <th scope="row">1</th>
+                        <td>KOKO</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="table-secondary">
+                        <th scope="row">1</th>
+                        <td>KOKO</td>
+                        <td>100</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </li>
+    <li>
+        <div class="col hidden" style="max-width: 100%;">
+            <div class="">
+                <img src="../../../../assets/Male_idle.gif" class="rotate" alt="">
+            </div>
+        </div>
+    </li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="bg-white sidebar-right-mods p-2">
     <div class="card" style="max-width: 100%;">
         <div class="row g-0 ">
             <div class="col-md-4">
                 <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
             </div>
-            <div class="col-md-6 align-self-center">
+            <div class="col-md-6 width-media align-self-center">
                 <h5 class="card-title">UserName</h5>
                 <div class="card-subtitle">Puntuacion: 50</div>
                 <div class="card-subtitle">Puesto en tabla: 3</div>
             </div>
         </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body">
+        <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="...">
+        <div class="card-body hidden">
             <div class="d-grid gap-2">
                 <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
             </div>
@@ -20,7 +117,10 @@
     <div class="card mt-4 scroll" style="max-width: 100%;">
         <app-achievements></app-achievements>
     </div>
-    <div class="mt-4" style="max-width: 100%;">
+    <div class="show">
+        <button class="btn btn-outline-primary">Ver ranking de scrummies</button>
+    </div>
+    <div class="mt-4 hidden" style="max-width: 100%;">
         <div class="row g-0 justify-content-center">
             <div class="col-auto align-self-center">
                 <h5 class="card-title">Top 3 scrummies</h5>
@@ -53,9 +153,9 @@
             </tbody>
         </table>
     </div>
-    <div class="col align-self-center">
+    <div class="col" style="max-width: fit-content;">
         <div class="">
             <img src="../../../../assets/Male_idle.gif" class="rotate" alt="">
         </div>
     </div>
-</div>
+</div> -->
