--- a/src/app/ranking/components/ranking-view/ranking-view.component.html
+++ b/src/app/ranking/components/ranking-view/ranking-view.component.html
@@ -1,40 +1,24 @@
-<div class="row d-flex m-3 justify-content-center align-items-center">
-    <div class="col-md-6">
-        <table class="table">
-            <thead>
-                <tr class="table-secondary">
-                    <th scope="col">Posición</th>
-                    <th scope="col">UserName</th>
-                    <th scope="col">Puntos</th>
-                </tr>
-            </thead>
-            <tbody class="table-group-divider">
-                <tr class="table-success">
-                    <th scope="row">1</th>
-                    <td>KOKO</td>
-                    <td>100</td>
-                </tr>
-                <tr class="table-success">
-                    <th scope="row">1</th>
-                    <td>KOKO</td>
-                    <td>100</td>
-                </tr>
-                <tr class="table-success">
-                    <th scope="row">1</th>
-                    <td>KOKO</td>
-                    <td>100</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-<div class="d-flex m-3 justify-content-center">
-    <div class="row">
-        <div class="col">
-            <input class="btn btn-outline-warning" type="button" value="Canjear Puntos">
-        </div>
-        <div class="col">
-            <input class="btn btn-outline-success" type="button" value="Sumar Puntos">
-        </div>
+<div class="contenedor">
+    <table class="table">
+        <thead>
+            <tr class="table-secondary">
+                <th scope="col">Posición</th>
+                <th scope="col">UserName</th>
+                <th scope="col">Puntos</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            <tr *ngFor="let item of listaDeUsuarios; let i = index" class="table-success">
+                <th scope="row">{{i+1}}</th>
+                <td>{{item['uid']}}</td>
+                <td>{{item['puntuacion']}}</td>
+                <td><img src="{{item['urlPic']}}" alt=""></td>
+                <!-- <td>{{}}</td> -->
+            </tr>
+        </tbody>
+    </table>
+    <div class="d-flex row">
+        <div class="col align-start"><button class="btn btn-outline-primary" type="submit">Get Puntos</button></div>
+        <div class="col align-end"><button class="btn btn-outline-primary">Sumar Puntos</button></div>
     </div>
 </div>
