--- a/src/app/shared/components/rigth-menu/rigth-menu.component.html
+++ b/src/app/shared/components/rigth-menu/rigth-menu.component.html
@@ -1,9 +1,9 @@
-<ul class="nav nav-pills flex-column mt-4 gap sidebar-right-mods">
+<ul class="nav nav-pills flex-column mt-5 gap sidebar-right-mods">
     <li class="nav-item">
         <div class="card" style="max-width: 100%;">
             <div class="row g-0 ">
                 <div class="col-md-4">
-                    <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
+                    <img src={{urlImgUserInSession}} alt="">
                 </div>
                 <div class="col-md-6 width-media align-self-center">
                     <h5 class="card-title">UserName</h5>
@@ -12,11 +12,6 @@
                 </div>
             </div>
             <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-            <div class="card-body hidden">
-                <div class="d-grid gap-2">
-                    <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-                </div>
-            </div>
         </div>
     </li>
     <li>
@@ -25,6 +20,11 @@
         </div>
     </li>
     <li>
+        <div class="row g-0 justify-content-center hidden">
+            <div class="col-auto align-self-center">
+                <h5 class="card-title">Conquistas</h5>
+            </div>
+        </div>
         <div class="card scroll hidden" style="max-width: 100%;">
             <app-achievements></app-achievements>
         </div>
@@ -32,41 +32,6 @@
     <li>
         <div class="show">
             <button class="btn btn-outline-primary">Ver ranking de scrummies</button>
-        </div>
-    </li>
-    <li>
-        <div class="hidden" style="max-width: 100%;">
-            <div class="row g-0 justify-content-center">
-                <div class="col-auto align-self-center">
-                    <h5 class="card-title">Top 3 scrummies</h5>
-                </div>
-            </div>
-            <table class="table">
-                <thead>
-                    <tr class="table-secondary">
-                        <th scope="col">Posición</th>
-                        <th scope="col">UserName</th>
-                        <th scope="col">Puntos</th>
-                    </tr>
-                </thead>
-                <tbody class="table-group-divider">
-                    <tr class="table-secondary">
-                        <th scope="row">1</th>
-                        <td>KOKO</td>
-                        <td>100</td>
-                    </tr>
-                    <tr class="table-secondary">
-                        <th scope="row">1</th>
-                        <td>KOKO</td>
-                        <td>100</td>
-                    </tr>
-                    <tr class="table-secondary">
-                        <th scope="row">1</th>
-                        <td>KOKO</td>
-                        <td>100</td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
     </li>
     <li>
