Cambios con set de pruebas local back @Auhor: Emery Estupiñan

--- a/src/app/profile/components/profile-view/profile-view.component.html
+++ b/src/app/profile/components/profile-view/profile-view.component.html
@@ -7,9 +7,9 @@
         </div>
         <div class="col-lg-8 d-flex flex-column justify-content-between">
             <div class="form-floating form-floating-profile">
-                <input type="email" name="email-profile" id="emailProfile" class="form-control personalized-inputs"
+                <input type="email" name="email-profile" id="email" class="form-control personalized-inputs"
                     value="{{email}}" placeholder="{{email}}">
-                <label for="emailProfile">Correo Electronico</label>
+                <label for="email">Correo Electronico</label>
             </div>
             <div class="form-floating">
                 <input type="text" name="name-profile" id="nameProfile" class="form-control personalized-inputs"
