--- a/src/app/auth/components/auth-card/auth-card.component.html
+++ b/src/app/auth/components/auth-card/auth-card.component.html
@@ -22,14 +22,14 @@
             <div class="mb-md-5 mt-md-4 pb-5">
               <div class="tab-content" id="auth-content">
                 <div class="tab-pane fade show active" id="login-tab-pane" role="tabpanel" aria-labelledby="login-tab" tabindex="0">
-                  <form (ngSubmit)="logIn()">
+                  <form (ngSubmit)="formSubmit()">
                     <div class="form-floating mb-4">
-                      <input type="email" [(ngModel)]="emailLogin" name="email-login" id="emaillogin" class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
+                      <input type="email" [(ngModel)]="loginData.username" name="email-login" id="emaillogin" class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
                       autocomplete="off" required/>
                       <label class="" for="emaillogin">Correo Electronico</label>
                     </div>
                     <div class="form-floating mb-4">
-                      <input type="password" [(ngModel)]="passwordLogin" name="password-login" id="passwordlogin" class="form-control bg-black text-white personalized-inputs" placeholder="asdasd"
+                      <input type="password" [(ngModel)]="loginData.password" name="password-login" id="passwordlogin" class="form-control bg-black text-white personalized-inputs" placeholder="asdasd"
                       required/>
                       <label class="" for="passwordlogin">Contraseña</label>
                     </div>
@@ -37,29 +37,29 @@
                   </form>
                 </div>
                 <div class="tab-pane fade" id="signup-tab-pane" role="tabpanel" aria-labelledby="signup-tab" tabindex="0">
-                  <form (ngSubmit)="register()">
+                  <form (ngSubmit)="registroUser()">
                     <div class="row">                      
                       <div class="col-md-6 mb-4">
                         <div class="form-floating">
-                          <input type="text" id="inputName" class="form-control bg-black text-white personalized-inputs" placeholder="Andres" autocomplete="off"/>
-                          <label  for="inputName">Nombres</label>
+                          <input type="text" [(ngModel)]="user.name" id="user.name" class="form-control bg-black text-white personalized-inputs" placeholder="Andres" autocomplete="off"/>
+                          <label  for="user.name">Nombres</label>
                         </div>
                       </div>
                       <div class="col-md-6 mb-4">
                         <div class="form-floating">
-                          <input type="text" id="inputLastname" class="form-control bg-black text-white personalized-inputs" placeholder="Perez" autocomplete="off"/>
-                          <label class="form-label" for="inputLastname">Apellidos</label>
+                          <input type="text" [(ngModel)]="user.lastname" id="user.lastname" class="form-control bg-black text-white personalized-inputs" placeholder="Perez" autocomplete="off"/>
+                          <label class="form-label" for="user.lastname">Apellidos</label>
                         </div>
                       </div>
                     </div>
                     <div class="form-floating mb-4">
-                      <input type="email" [(ngModel)]="emailsignup" name="email-signup" id="emailsignup" class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
+                      <input type="email" [(ngModel)]="user.email" name="user.email" id="user.email" class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
                       autocomplete="off"/>
-                      <label class="form-label" for="emailsignup">Correo Electronico</label>
+                      <label class="form-label" for="email">Correo Electronico</label>
                     </div>
                     <div class="form-floating mb-4">
-                      <input type="password" [(ngModel)]="passwordsignup" name="password-signup" id="passwordsignup" class="form-control bg-black text-white personalized-inputs" placeholder="asdasd"/>
-                      <label class="form-label" for="passwordsignup">Contraseña</label>
+                      <input type="password" [(ngModel)]="user.password" name="user.password" id="user.password" class="form-control bg-black text-white personalized-inputs" placeholder="asdasd"/>
+                      <label class="form-label" for="password">Contraseña</label>
                     </div>
                     <button class="btn btn-outline-success btn-lg px-5 mt-4" type="submit">Registrate</button>
                   </form>
