Se completa todo el tema de la autenticacion juntando firebase con backJwt ya valida en ambos lugares, ya se toma la data de username y la foto y aparece automaticamente apenas inicie sesion sin necesidar de cargar el back con esa consulta, estos datos se guardan en el sessionStorage desps de hacer la consulta en firestore para hacer uso de su simplicidad en las consultas

--- a/src/app/shared/components/rigth-menu/rigth-menu.component.html
+++ b/src/app/shared/components/rigth-menu/rigth-menu.component.html
@@ -6,7 +6,7 @@
                     <img src={{urlImgUserInSession}} alt="">
                 </div>
                 <div class="col-md-6 width-media align-self-center">
-                    <h5 class="card-title">UserName</h5>
+                    <h5 class="card-title">{{usernameInSession}}</h5>
                     <div class="card-subtitle">Puntuacion: 50</div>
                     <div class="card-subtitle">Puesto en tabla: 3</div>
                 </div>
