--- a/src/app/auth/components/auth-card/auth-card.component.html
+++ b/src/app/auth/components/auth-card/auth-card.component.html
@@ -23,16 +23,18 @@
               <div class="tab-content" id="auth-content">
                 <div class="tab-pane fade show active" id="login-tab-pane" role="tabpanel" aria-labelledby="login-tab"
                   tabindex="0">
-                  <form (ngSubmit)="logIn()">
+                  <form [formGroup]="formLogin" (ngSubmit)="logIn()">
                     <div class="form-floating mb-4">
-                      <input type="email" [(ngModel)]="emailLogin" name="email-login" id="emailLogin"
+                      <input type="email" name="email-login" id="emailLogin"
                         class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
-                        autocomplete="off" required />
+                        autocomplete="off"  [formControl]="emailLoginControl"/>
+                        <app-error-forms-handle [formControlErrorEmail]="emailLoginControl" [input]='"email"'></app-error-forms-handle>
                       <label class="" for="emailLogin">Correo Electronico</label>
                     </div>
                     <div class="form-floating mb-4">
-                      <input type="password" [(ngModel)]="loginData.password" name="password-login" id="password"
-                        class="form-control bg-black text-white personalized-inputs" placeholder="asdasd" required />
+                      <input type="password" name="password-login" id="password"
+                        class="form-control bg-black text-white personalized-inputs" placeholder="******" [formControl]="passwordLoginControl"/>
+                        <app-error-forms-handle [formControlErrorPasswordLogin]="passwordLoginControl" [input]='"Contraseña"'></app-error-forms-handle>
                       <label class="" for="password">Contraseña</label>
                     </div>
                     <button class="btn btn-outline-success btn-lg px-5 mt-4" type="submit">Inicia Sesion</button>
@@ -40,37 +42,54 @@
                 </div>
                 <div class="tab-pane fade show" id="signup-tab-pane" role="tabpanel" aria-labelledby="signup-tab"
                   tabindex="0">
-                  <form (ngSubmit)="register()" (keydown.enter)="$event.preventDefault()">
+                  <form [formGroup]="formRegister" (ngSubmit)="register()" (keydown.enter)="$event.preventDefault()">
                     <div class="row">
                       <div class="col-md-6 mb-4">
                         <div class="form-floating">
-                          <input type="text" [(ngModel)]="user.name" name="user.name" id="user.name" class="form-control bg-black text-white personalized-inputs"
-                            placeholder="Andres" autocomplete="off" />
-                          <label for="user.name">Nombres</label>
+                          <input type="text" name="firstNameRegister" id="firstNameRegister" class="form-control bg-black text-white personalized-inputs"
+                            placeholder="Andres" autocomplete="off" [formControl]="firstNameControl" />
+                            <app-error-forms-handle [formControlErrorNombre]="firstNameControl" [input]='"Nombre"'></app-error-forms-handle>
+                          <label for="firstNameRegister">Nombres</label>
                         </div>
                       </div>
                       <div class="col-md-6 mb-4">
                         <div class="form-floating">
-                          <input type="text" [(ngModel)]="user.lastname" name="user.lastname" id="user.lastname"
+                          <input type="text" name="lastNameRegister" id="lastNameRegister"
                             class="form-control bg-black text-white personalized-inputs" placeholder="Perez"
-                            autocomplete="off" />
-                          <label class="form-label" for="user.lastname">Apellidos</label>
+                            autocomplete="off" [formControl]="lastNameControl"/>
+                            <app-error-forms-handle [formControlErrorApellido]="lastNameControl" [input]='"Apellido"'></app-error-forms-handle>
+                          <label class="form-label" for="lastNameRegister">Apellidos</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6 mb-4">
+                        <div class="form-floating">
+                          <input type="email" name="emailRegister" id="emailRegister"
+                            class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
+                            autocomplete="off" [formControl]="emailRegisterControl"/>
+                            <app-error-forms-handle [formControlErrorEmail]="emailRegisterControl" [input]='"Email"'></app-error-forms-handle>
+                          <label class="form-label" for="emailRegister">Correo Electronico</label>
+                        </div>
+                      </div>
+                      <div class="col-md-6 mb-4">
+                        <div class="form-floating">
+                          <input type="email" name="username-signup" id="username"
+                            class="form-control bg-black text-white personalized-inputs" placeholder="username1"
+                            autocomplete="off" [formControl]="userNameControl"/>
+                            <app-error-forms-handle [formControlErrorUsername]="userNameControl" [input]='"Nickname"'></app-error-forms-handle>
+                          <label class="form-label" for="username">Nickname</label>
                         </div>
                       </div>
                     </div>
                     <div class="form-floating mb-4">
-                      <input type="email" [(ngModel)]="user.email" name="email-signup" id="email"
-                        class="form-control bg-black text-white personalized-inputs" placeholder="name@example.com"
-                        autocomplete="off" />
-                      <label class="form-label" for="email">Correo Electronico</label>
-                    </div>
-                    <div class="form-floating mb-4">
-                      <input type="password" [(ngModel)]="user.password" name="password-signup" id="password"
-                        class="form-control bg-black text-white personalized-inputs" placeholder="asdasd" />
-                      <label class="form-label" for="password">Contraseña</label>
+                      <input type="password" name="passwordRegister" id="passwordRegister"
+                        class="form-control bg-black text-white personalized-inputs" placeholder="*****" [formControl]="passwordRegisterControl"/>
+                        <app-error-forms-handle [formControlErrorPasswordRegister]="passwordRegisterControl" [input]='"Contraseña"'></app-error-forms-handle>                        
+                      <label class="form-label" for="passwordRegister">Contraseña</label>
                     </div>
                     <button type="button" class="btn btn-outline-success btn-lg px-5 mt-4" data-bs-toggle="modal"
-                      data-bs-target="#staticBackdrop">
+                      data-bs-target="#staticBackdrop" [disabled]="!formRegister.valid">
                       Registrarse
                     </button>
 
