--- a/src/app/ranking/components/ranking-view/ranking-view.component.html
+++ b/src/app/ranking/components/ranking-view/ranking-view.component.html
@@ -1,18 +1,26 @@
-<div class="contenedor">
+<div *ngIf="!cargando" class="alert alert-info text-center mt-3">
+    <h4 class="alert-heading">Cargando Data</h4>
+    <p>
+        <i class="fa fa-sync-alt fa-spin fa-2x"></i>
+    </p>
+</div>
+
+<div *ngIf="cargando" class="contenedor">
     <table class="table">
         <thead>
             <tr class="table-secondary">
-                <th scope="col">Posición</th>
+                <th id="cellImg" scope="col">Posición</th>
                 <th scope="col">UserName</th>
                 <th scope="col">Puntos</th>
+                <th scope="col">Avatar</th>
             </tr>
         </thead>
         <tbody class="table-group-divider">
-            <tr *ngFor="let item of listaDeUsuarios; let i = index" class="table-success">
-                <th scope="row">{{i+1}}</th>
-                <td>{{item['uid']}}</td>
-                <td>{{item['puntuacion']}}</td>
-                <td><img src="{{item['urlPic']}}" alt=""></td>
+            <tr *ngFor="let item of listaDeUsuarios; let i = index" class="table-secondary">
+                <th id="cellImg">{{i+1}}</th>
+                <td id="cellImg">{{item['userName']}}</td>
+                <td id="cellImg">{{item['puntuacion']}}</td>
+                <td id="cellImg"><img src="{{item['urlPic']}}" alt=""></td>
                 <!-- <td>{{}}</td> -->
             </tr>
         </tbody>
